# unbound

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
doc/: architecture.excalidraw  chunk-boundaries.excalidraw  density.excalidraw
foam/: project-overview.md  random-thoughts.md
unbound-client/: Cargo.toml
unbound-lib/: Cargo.toml
unbound-lib/src/: bounds.rs  change_tracking.rs  hex_div.rs  lib.rs  marching_cubes.rs  math.rs  math_enums.rs  octree.rs  version.rs
unbound-lib/src/collections/: octree.rs
unbound-lib/src/collections/octree/: map.rs  set.rs
unbound-lib/src/hex_div/: bounds.rs  builder.rs  cache.rs  collections.rs  extent.rs  iter.rs  node.rs  splits.rs  visit.rs
unbound-lib/src/hex_div/node/: bool.rs  builder.rs  iter.rs  visit.rs
unbound-lib/src/hex_div/node/iter/: filter.rs  map.rs  visit.rs  zip.rs
unbound-lib/src/hex_div/node/iter/filter/: bounds.rs  children.rs  leaves.rs  nodes.rs
unbound-lib/src/hex_div/node/iter/map/: nodes.rs
unbound-lib/src/hex_div/node/iter/zip/: leaves.rs  nodes.rs
unbound-lib/src/math/: bounds.rs
unbound-lib/src/octree/: bounds.rs  builder.rs  cache.rs  extent.rs  iter.rs  iter_mut.rs  iterator.rs  node.rs  octant.rs  stack.rs  visit.rs
unbound-lib/src/octree/node/: bool.rs
unbound-server/: Cargo.toml
unbound-server/src/: main.rs
unbound-shared/: Cargo.toml
unbound-shared/src/: bounds.rs  change_tracking.rs  lib.rs  marching_cubes.rs  math_enums.rs  octree.rs  version.rs
unbound-shared/src/octree/: bounds.rs  extent.rs  iterator.rs  map.rs  node.rs  octant.rs  offset.rs  set.rs  visit.rs
