[workspace]
members = ["unbound-client", "unbound-server", "unbound-shared"]
default-members = ["unbound-client", "unbound-shared"]
resolver = "2"

[workspace.dependencies]
array-init = "2.1.0"
arrayvec = "0.7.4"
bevy = "0.13.2"
enum-map = "2.7.3"
enumset = "1.1.3"
itertools = "0.13.0"

unbound-shared = { path = "unbound-shared" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
